--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,16 @@ dist.jar=${dist.dir}/Snifer2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=C:\\Jfrechart\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Jfrechart\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.jnetpcap-1.4.classpath}
+    ${libs.jnetpcap-1.4.classpath}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
