--- a/nbproject/configs/jnetpcap-1.4_config.properties
+++ b/nbproject/configs/jnetpcap-1.4_config.properties
@@ -1,2 +1,2 @@
 $label=jnetpcap-1.4 config
-run.jvmargs=-Djava.library.path="C:\\JnetPcap\\libs\\jnetpcap-1.4.b0004-1"
+run.jvmargs=-Djava.library.path="C:\\JnetPcap\\libs\\jnetpcap-1.3.0"
